<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_reload"
            android:icon="@drawable/ic_reload"
            android:title="@string/sidebar_button_reload" />
        <item
            android:id="@+id/nav_new"
            android:enabled="false"
            android:icon="@drawable/ic_add"
            android:title="@string/sidebar_button_new_session"
            android:visible="false" />
        <item
            android:id="@+id/nav_switch"
            android:enabled="false"
            android:icon="@drawable/ic_switch"
            android:title="@string/sidebar_button_switch_session"
            android:visible="false" />
        <item
            android:id="@+id/appbar_hide"
            android:icon="@drawable/ic_app_bar"
            android:title="@string/sidebar_button_toggle_appbar_visibility" />
        <item
            android:id="@+id/nav_keyboard"
            android:icon="@drawable/ic_toggle_keyboard"
            android:title="@string/appbar_button_toggle_keyboard" />
        <item
            android:id="@+id/nav_dark_mode"
            android:icon="@drawable/ic_dark_mode"
            android:title="@string/sidebar_button_toggle_dark_mode" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/sidebar_button_logout" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/sidebar_button_about" />
    </group>


    <item android:title="@string/sidebar_title_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:enabled="false"
                android:icon="@drawable/ic_manage"
                android:title="@string/sidebar_button_settings"
                android:visible="false" />
        </menu>
    </item>
</menu>
